[gd_scene load_steps=25 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Effects/EnemyDeathEffect.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "Die",
"speed": 15.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 2.88503
height = 3.4365

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.19308
height = 4.58774

[sub_resource type="CircleShape2D" id=20]
radius = 85.4538

[node name="Bat" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 6 )
animation = "Fly"

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
max_health = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.0897484, -13.8207 )
shape = SubResource( 8 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 20 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Hurtbox" to="." method="_on_Hurtbox_no_health"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]

[editable path="Hurtbox"]
